--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 			<h1 id="dcrab-logo"><a href="index.html"><span>Wo</span><span>rk</span></a></h1>
 			<nav id="dcrab-main-menu" role="navigation">
 				<ul>
-					<li class="dcrab-active"><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>
+					<li class="dcrab-active"><a href="about.html">Home</a></li>
+					<li><a href="#services">Services</a></li>
 					<li><a href="work.html">Skill Matrix</a></li>
 					<li><a href="blog.html">Packages</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -79,60 +79,6 @@
 		</aside>
 
 		<div id="dcrab-main">
-			<!--<aside id="dcrab-hero" class="js-fullheight">
-				<div class="flexslider js-fullheight">
-					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_1.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 col-md-pull-2 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>Strategic Design for Brands</h1>
-						   					<h2>100% html5 bootstrap templates Made by <a href="https://dcrab.com/" target="_blank">dcrab.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 col-md-pull-2 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>Creators of Brands Template</h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://dcrab.com/" target="_blank">dcrab.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_bg_3.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 col-md-pull-2 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>Design &amp; develop functional sites</h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://dcrab.com/" target="_blank">dcrab.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				  	</ul>
-			  	</div>
-			</aside>-->
 			<aside id="dcrab-hero-main">
 				<div class="parallax-overlay animate-box" id="particles-js"  data-animate-effect="fadeIn">
 					<div class="dcrab-hero-main-inner">
@@ -143,72 +89,41 @@
 				</div>
 			</aside>
 
-			<div class="dcrab-about">
+			<div class="dcrab-services" id="services">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6">
-							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/img_bg_2.jpg);">
-								<div class="about-img-2 animate-box" data-animate-effect="fadeInRight" style="background-image: url(images/img_bg_3.jpg);"></div>
+							<div class="about-img animate-box" data-animate-effect="fadeInLeft" >
+								<div class="about-img-2 animate-box" data-animate-effect="fadeInRight"></div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="about-desc">
-								<span class="heading-meta">Welcome &amp; Introduce</span>
+								<span class="heading-meta">Services</span>
 								<h3>Hola! my name is Louie Jie!</h3>
 								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
 							</div>
-							<div class="fancy-collapse-panel">
-								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingOne">
-									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Why choose me?
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-									         <div class="panel-body">
-									            <div class="row">
-										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-										      		</div>
-										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-										      		</div>
-										      	</div>
-									         </div>
-									    </div>
+							<div class="row">
+								<div class="col-md-4 text-center" >
+									<div class="service-box text-center">
+										<img src="images/web-design.png">
 									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What I do?
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
-									        </div>
-									    </div>
+									<h2>Design many website</h2>
+									<a class="btn btn-primary " href="#">Get more information</a>
+								</div>
+								<div class="col-md-4 text-center">
+									<div class="service-box text-center">
+										<img src="images/logo-design.png">
 									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingThree">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">My Specialties
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
-									        </div>
-									    </div>
+									<h2>CREATIVE LOGO DESIGN</h2>
+									<a class="btn btn-primary " href="#">Get more information</a>
+								</div>
+								<div class="col-md-4 text-center">
+									<div class="service-box text-center">
+										<img src="images/ux-ui.png">
 									</div>
+									<h2>AWESOME UI/UI </h2>
+									<a class="btn btn-primary " href="#">Get more information</a>
 								</div>
 							</div>
 						</div>
