--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="parallax-overlay animate-box" id="particles-js"  data-animate-effect="fadeIn">
 					<div class="dcrab-hero-main-inner">
 						<div class="dcrab-hero-main-slogan">
-							<h1>I AM A <span id="text-rotating">DEVELOPER, DESIGNER</span></h1>
+							<h1 class="text-center">I AM A <span id="text-rotating">DEVELOPER, DESIGNER</span></h1>
 						</div>
 					</div>
 				</div>
@@ -92,38 +92,31 @@
 			<div class="dcrab-services" id="services">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="about-img animate-box" data-animate-effect="fadeInLeft" >
-								<div class="about-img-2 animate-box" data-animate-effect="fadeInRight"></div>
+						<div class="col-md-4">
+							<div class="horizontal-box text-left">
+								<h1 class="heading-meta">What I do best?</h1>
+								<div class="dcrab-text text-left">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="about-desc">
-								<span class="heading-meta">Services</span>
-								<h3>Hola! my name is Louie Jie!</h3>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+						<div class="col-md-8 animate-box  text-left" data-animate-effect="fadeInLeft">
+							<div class="expert-box">
+								<h2 class="title">Project managment</h2>
+								<div class="process-bar">
+									<div class="process-value" data-process-value="10"></div>
+								</div>
+								<div class="dcrab-text">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								</div>
 							</div>
-							<div class="row">
-								<div class="col-md-4 text-center" >
-									<div class="service-box text-center">
-										<img src="images/web-design.png">
-									</div>
-									<h2>Design many website</h2>
-									<a class="btn btn-primary " href="#">Get more information</a>
+							<div class="expert-box">
+								<h2 class="title">Project managment</h2>
+								<div class="process-bar">
+									<div class="process-value" data-process-value="20"></div>
 								</div>
-								<div class="col-md-4 text-center">
-									<div class="service-box text-center">
-										<img src="images/logo-design.png">
-									</div>
-									<h2>CREATIVE LOGO DESIGN</h2>
-									<a class="btn btn-primary " href="#">Get more information</a>
-								</div>
-								<div class="col-md-4 text-center">
-									<div class="service-box text-center">
-										<img src="images/ux-ui.png">
-									</div>
-									<h2>AWESOME UI/UI </h2>
-									<a class="btn btn-primary " href="#">Get more information</a>
+								<div class="dcrab-text">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 								</div>
 							</div>
 						</div>
